# configuror

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  appveyor.yml  mkdocs.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
configuror/: __init__.py  exceptions.py  main.py  utils.py
docs/: api.md  changelog.md  index.md  installation.md  usage.md
tests/: conftest.py  dummy.env  dummy.ini  dummy.json  dummy.toml  dummy.yaml  dummy_module.py  test_config_initialization.py  test_config_private_methods.py  test_environment.py  test_load_from_ini.py  test_load_from_json.py  test_load_from_object.py  test_load_from_python_file.py  test_load_from_toml.py  test_load_from_yaml.py  test_miscellaneous_methods.py  test_utils.py
