[tool.poetry]
name = "configuror"
version = "0.2.0"
description = "A configuration management toolkit"
authors = ["lewoudar <lewoudar@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["configuration", "yaml", "toml", "dotenv", "ini"]

homepage = "https://configuror.readthedocs.io/en/stable"
repository = "https://github.com/lewoudar/configuror"
documentation = "https://configuror.readthedocs.io/en/stable/usage"

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]

packages = [
    {include = "configuror"}
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lewoudar/configuror/issues"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.0"
pyyaml = "^5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
bandit = "^1.6.2"
pytest = "^5.3.2"
pytest-mock = "^2.0.0"
pytest-cov = "^2.8.1"
mkdocs = "^1.0.4"
nox = "^2019.11.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
