[tool.poetry]
name = "configuror"
version = "0.3.0"
description = "A configuration management toolkit"
authors = ["lewoudar <lewoudar@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["configuration", "yaml", "toml", "dotenv", "ini"]

homepage = "https://configuror.readthedocs.io/en/stable"
repository = "https://github.com/lewoudar/configuror"
documentation = "https://configuror.readthedocs.io/en/stable/usage"

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]

packages = [
    {include = "configuror"}
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lewoudar/configuror/issues"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.0"
pyyaml = "^6.0.1"

[tool.poetry.group.lint.dependencies]
bandit = "^1.7.5"
ruff = "^0.1.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
nox = "^2023.4.22"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"

[tool.poetry.group.audit.dependencies]
safety = "^2.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=configuror --cov-report html --cov-report xml --cov-report term"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "I",   # isort
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "C90", # McCabe complexity
  "RUF"
]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
